changed config.yml backup name and requirements

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,9 +43,10 @@ jobs:
       steps:
         - checkout
         - gcp-cli/initialize
+        - setup_directquery_cloud_credentials
         - gcp-storage/upload:
               source_path: public/*
-              destination_bucket: backup
+              destination_bucket: backupgithub
               destination_prefix: public/
               cache_control: public, max-age=86400
 
