--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,14 +53,7 @@ jobs:
       executor: gcp-storage/google
       steps:
         - attach_workspace:
-           at: /tmp/workspace
-
-        - run: |
-          if [[ `cat /tmp/workspace/echo-output` == "Hello, world!" ]]; then
-            echo "It worked!";
-          else
-            echo "Nope!"; exit 1
-          fi
+           at: /tmp/workspac
 
         - gcp-cli/initialize
 
