--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,14 +9,6 @@ orbs:
   cli: circleci/circleci-cli@0.1.9
   git-shallow-clone: guitarrapc/git-shallow-clone@2.8.0
 
-commands:
-  setup_directquery_cloud_credentials:
-    steps:
-      - run:
-          name: Write DirectQuery Cloud Credentials to a file
-          command: |
-            mkdir -p $HOME/{.aws,.google}
-            echo $DIRECTQUERY_GCP_CREDENTIALS | base64 --d > $HOME/.google/direct-query-credentials
 
 jobs:
   build:
@@ -49,6 +41,11 @@ jobs:
   use-gcp:
     executor: gcp-cli/default
     steps:
+     - run: 
+          name: Setup Google Cloud SDK
+          command: |
+            echo $GCLOUD_SERVICE_KEY > ${HOME}/gcloud-service-key.json
+            gcloud auth activate-service-account --key-file=${HOME}/gcloud-service-key.json
       - gcp-cli/setup:
           version: 404.0.0
       - persist_to_workspace:
