--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
       - run: printenv
       - run:
           command: |
-            python3 p1.py     
+            python3 final_script.py
       - run:
           command: |
             pytest --version
@@ -40,33 +40,17 @@ jobs:
           paths: 
             - .
 
-  use-gcp:
-    executor: gcp-cli/default
-    steps:
-      - gcp-cli/setup:
-          version: 404.0.0      
-      - run: 
-          name: Setup Google Cloud SDK
-          command: |
-            echo $GCLOUD_SERVICE_KEY > ${HOME}/gcloud-service-key.json
-            gcloud auth activate-service-account --key-file=${HOME}/gcloud-service-key.json
-            gcloud --quiet config set project ${GOOGLE_PROJECT_ID}
-      - attach_workspace:
-          at: /home/circleci/project
-          paths:
-            - .
-      - run:
-          name: Show all files
-          command: find "$(pwd)"
-      - gcp-storage/upload:
-            source_path: /home/circleci/project/Repos
-            destination_bucket: backup_folder
-            cache_control: public, max-age=86400
 
 workflows:
   main:
     jobs:
       - build
-      - use-gcp:
-          requires:
-            - build
+  nightly:
+      triggers:
+      - schedule:
+          cron: "0 0 * * SAT"
+          filters:
+            branches:
+              only:
+                - master
+                - 6.1
