added run print SERVICE_ACCOUNT_FILE step

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,10 @@ jobs:
     executor: python/default
     steps:
       - checkout
+      - run:
+          name: "echo an SERVICE_ACCOUNT_FILE, that is part of our context"
+          command: |
+            echo $SERVICE_ACCOUNT_FILE    
       - python/install-packages:
           pkg-manager: pip
       - python/install-packages:
