--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,7 @@ jobs:
     executor: python/default
     steps:
       - checkout
+      - run: echo $PYTHONPATH
       - run:
           name: "echo an SERVICE_ACCOUNT_FILE, that is part of our context"
           command: |
