Setup custom ENV variables

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,8 @@ jobs:
     steps:
       - checkout
       - run:
-          command: echo "$SERVICE_ACCOUNT | base64 -di" >> SERVICE_ACCOUNT_DECODED
+          name: "Setup custom ENV variables"
+          command:  echo 'export SERVICE_ACCOUNT_DECODED="$(echo $SERVICE_ACCOUNT | base64 -d)"' >> $BASH_ENV
       - run: # print the name of the branch we're on
           name: "What branch am I on?"
           command: echo ${CIRCLE_BRANCH}
